--- a/package.json
+++ b/package.json
@@ -3,12 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/league-spartan": "^4.5.13",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.11.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "emailjs": "^4.0.1",
+    "framer-motion": "^10.12.4",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-id-swiper": "^4.0.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-page-scroll-progress-bar": "^3.0.1",
+    "react-pdf": "^6.2.2",
+    "react-progressbar-on-scroll": "^2.0.0",
+    "react-reveal": "^1.2.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "6.14.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
