--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.15",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,7 @@
     "react-page-scroll-progress-bar": "^3.0.1",
     "react-pdf": "^6.2.2",
     "react-progressbar-on-scroll": "^2.0.0",
+    "react-redux": "^9.1.2",
     "react-reveal": "^1.2.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "6.14.1",
